# MPlib

./: .clang-format  .gitignore  .readthedocs.yaml  CITATION.cff  CMakeLists.txt  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build_and_publish.yml
data/mycobot/: mycobot_with_gripper_parallel.srdf  mycobot_with_gripper_parallel.urdf
data/mycobot/meshes/arm/: link1.dae  link2.dae  link3.dae  link4.dae  link5.dae  link6.dae  link_base.dae
data/mycobot/meshes/gripper/: gripper_base.dae  left_finger.dae  (+5 more)
data/panda/: panda_on_rail.srdf  panda_on_rail.urdf
dev/: DEV.md  README.md  build_wheels.sh  docker_setup.sh  gen_stubs.sh  generate_pdoc.sh  generate_stub_and_doc.sh  generate_stubs.sh  mkdoc.py  mkdoc.sh  start_doc_webserver.sh  start_docker.sh  stubgen.py  stubgen.sh  update_bashrc.sh
dev/test_mkdoc/drake/: libclang_setup.py  mkdoc.py  mkdoc_comment.py
dev/test_mkdoc/drake_sample/: docstring.h  docstring_drake.h  mkdoc.sh  mkdoc_drake.sh  sample_header.h
dev/test_mkdoc/long_parameter_docs/: docstring.h  docstring_drake.h  mkdoc.sh  sample_header.h
dev/test_mkdoc/mplib_sample/: docstring.h  docstring_drake.h  sample_header.h
dev/test_mkdoc/sample_header_docs/: docstring.h  docstring_drake.h  mkdoc_drake.sh  sample_header.h
doc/mplib/: examples.html
doc/mplib/examples/: two_stage_motion.html
docker/: Dockerfile
docs/: compose.yaml  get_wheel_artifact.py  index.html  mplib.html  requirements.txt  search.js
docs/mplib/: planner.html  pymp.html
docs/mplib/examples/: collision_avoidance.html  constrained_planning.html  demo.html  demo_setup.html  detect_collision.html  moving_robot.html  two_stage_motion.html
docs/source/: conf.py  index.rst  mplib.pymp.rst  mplib.rst
docs/source/motion_planning/: collision_avoidance.rst  examples.rst  getting_started.rst  plan_a_path.rst
docs/source/pymp/: index.rst  pymp.rst
docs/source/reference/: Planner.rst  PlanningWorld.rst  index.rst  sapien_utils.rst  urdf_utils.rst
docs/source/tutorials/: collision_avoidance.rst  constrained_planning.rst  detect_collision.rst  examples.rst  getting_started.rst  inverse_kinematics.rst  plan_a_path.rst  planning_with_fixed_joints.rst
examples/: collision_avoidance.py  constrained_planning.py  demo.py  demo_setup.py  detect_collision.py  moving_robot.py  sapien_to_planning_world.py  two_stage_motion.py
include/mplib/: articulated_model.h  color_printing.h  fcl_model.h  kdl_model.h  macros_utils.h  ompl_planner.h  pinocchio_model.h  planning_world.h  types.h  urdf_utils.h
include/mplib/collision_detection/: collision_common.h  collision_matrix.h  types.h
include/mplib/core/: articulated_model.h  attached_body.h
include/mplib/kinematics/: types.h
include/mplib/macros/: assert.h  class_forward.h
include/mplib/planning/: types.h
include/mplib/utils/: assimp_loader.h  conversion.h  pose.h  random.h
mplib/: __init__.py  __init__.pyi  planner.py  planner.pyi  spec.py  urdf_utils.py
mplib/collision_detection/: __init__.py  fcl.py
mplib/examples/: collision_avoidance.py  constrained_planning.py  demo.py  demo_setup.py  detect_collision.py  moving_robot.py  two_stage_motion.py
mplib/kinematics/: __init__.py  kdl.py  pinocchio.py
mplib/planning/: __init__.py  ompl.py
mplib/pymp/: __init__.pyi  articulation.pyi  fcl.pyi  kdl.pyi  ompl.pyi  pinocchio.pyi  planning_world.pyi
mplib/pymp/articulation/: __init__.pyi
mplib/pymp/collision_detection/: __init__.pyi  fcl.pyi
mplib/pymp/fcl/: __init__.pyi
mplib/pymp/kdl/: __init__.pyi
mplib/pymp/kinematics/: __init__.pyi  kdl.pyi  pinocchio.pyi
mplib/pymp/ompl/: __init__.pyi
mplib/pymp/pinocchio/: __init__.pyi
mplib/pymp/planning/: __init__.pyi  ompl.pyi
mplib/pymp/planning_world/: __init__.pyi
mplib/sapien_utils/: __init__.py  conversion.py  srdf_exporter.py  urdf_exporter.py
pybind/: pybind.cpp  pybind_macros.hpp  pybind_planning_world.cpp
pybind/collision_detection/: pybind_collision_common.cpp  pybind_collision_detection.cpp  pybind_collision_matrix.cpp
pybind/collision_detection/fcl/: pybind_collision_common.cpp  pybind_fcl.cpp  pybind_fcl_model.cpp  pybind_fcl_utils.cpp
pybind/core/: pybind_articulated_model.cpp  pybind_articulation.cpp  pybind_attached_body.cpp
pybind/docstring/: planning_world.h
pybind/docstring/collision_detection/: collision_common.h  collision_matrix.h
pybind/docstring/core/: articulated_model.h  attached_body.h
pybind/docstring/utils/: assimp_loader.h  conversion.h  pose.h  random.h
pybind/kinematics/: pybind_kinematics.cpp
pybind/kinematics/kdl/: pybind_kdl_model.cpp
pybind/kinematics/pinocchio/: pybind_pinocchio_model.cpp
pybind/planning/: pybind_planning.cpp
pybind/planning/ompl/: pybind_fixed_joint.cpp  pybind_ompl_planner.cpp
pybind/utils/: pose.cpp  random.cpp
pymp/: __init__.py
python/: pybind.cpp  pybind_articulation.hpp  pybind_fcl.hpp  pybind_kdl.hpp  pybind_ompl.hpp  pybind_pinocchio.hpp  pybind_planning_world.hpp
python/docstring/: articulated_model.h  color_printing.h  fcl_model.h  kdl_model.h  ompl_planner.h  pinocchio_model.h  planning_world.h  types.h  urdf_utils.h
src/: articulated_model.cpp  articulated_model.h  color_printing.h  fcl_model.cpp  fcl_model.h  kdl_model.cpp  kdl_model.h  macros_utils.hpp  ompl_planner.cpp  ompl_planner.h  pinocchio_model.cpp  pinocchio_model.h  planning_world.cpp  planning_world.h  urdf_utils.cpp  urdf_utils.h
src/collision_detection/: collision_matrix.cpp
src/collision_detection/fcl/: collision_common.cpp  fcl_model.cpp  fcl_utils.cpp
src/core/: articulated_model.cpp  attached_body.cpp
src/kinematics/kdl/: kdl_model.cpp  kdl_utils.cpp
src/kinematics/pinocchio/: pinocchio_model.cpp
src/planning/ompl/: fixed_joint.cpp  ompl_planner.cpp  ompl_utils.cpp
src/utils/: assimp_loader.cpp  conversion.cpp
tests/: test_articulated_model.cpp  test_articulation.py  test_basic.py  test_fcl_model.py  test_non_panda.py  test_pinocchio.py  test_pinocchio_non_panda.py  test_planner.py  test_planner_non_panda.py  test_sapien_conversion.py
(+40 files in other folders)
